@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.matsim</groupId>
 		<artifactId>contrib</artifactId>
-		<version>2026.0-SNAPSHOT</version>
+		<version>2027.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.matsim.contrib</groupId>
@@ -15,11 +13,17 @@
 	<description>Provides communication implementations for distributed simulations on multiple jvms.</description>
 
 	<properties>
-		<aeron.version>1.44.1</aeron.version>
-		<hazelcast.version>5.6.0</hazelcast.version>
+		<aeron.version>1.52.2</aeron.version>
+		<hazelcast.version>5.7.0</hazelcast.version>
 
 		<!-- Use -DskipShaded=false to build a executable jar. -->
 		<skipShaded>true</skipShaded>
+
+
+		<!-- Required by Aeron 1.47+, see https://github.com/aeron-io/aeron/wiki/Change-Log#1470-2025-01-17 -->
+		<test.jvm.aeron>
+			--add-opens java.base/jdk.internal.misc=ALL-UNNAMED
+		</test.jvm.aeron>
 	</properties>
 
 	<dependencies>
@@ -46,12 +50,12 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.apache.fury</groupId>
-			<artifactId>fury-core</artifactId>
+			<groupId>org.apache.fory</groupId>
+			<artifactId>fory-core</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.fury</groupId>
-			<artifactId>fury-format</artifactId>
+			<groupId>org.apache.fory</groupId>
+			<artifactId>fory-format</artifactId>
 		</dependency>
 
 		<dependency>
@@ -78,14 +82,13 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-shade-plugin</artifactId>
-				<version>3.6.1</version>
+				<version>3.6.2</version>
 				<configuration>
 					<outputFile>sim.jar</outputFile>
 					<skip>${skipShaded}</skip>
 					<transformers>
 						<!-- The following sets the main class for the executable jar as you otherwise would with the assembly plugin -->
-						<transformer
-							implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+						<transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 							<manifestEntries>
 								<Main-Class>org.matsim.dsim.RunDistributedSim</Main-Class>
 								<Specification-Vendor>com.simunto</Specification-Vendor>
@@ -95,10 +98,9 @@
 							</manifestEntries>
 						</transformer>
 						<!-- The following merges the various GeoTools META-INF/services files         -->
-						<transformer
-							implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
 						<!-- include logger specification (log4j2.xml) -->
-						<transformer implementation="org.apache.maven.plugins.shade.resource.XmlAppendingTransformer"/>
+						<transformer implementation="org.apache.maven.plugins.shade.resource.XmlAppendingTransformer" />
 					</transformers>
 					<filters>
 						<filter>
@@ -119,6 +121,15 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>${test.jvm.aeron} ${argLine}</argLine>
+				</configuration>
 			</plugin>
 
 		</plugins>
